--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@alpacahq/alpaca-trade-api": "^3.0.1",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -20,6 +21,7 @@
     "umzug": "^3.2.1"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.2.13",
     "nodemon": "^2.0.22"
   }
 }
