--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.0",
+    "playwright": "^1.35.0",
     "sequelize": "^6.31.1",
     "umzug": "^3.2.1"
   },
