--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "@alpacahq/alpaca-trade-api": "^3.0.1",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
+    "node-telegram-bot-api": "^0.61.0",
     "pg": "^8.11.0",
     "playwright": "^1.35.0",
     "sequelize": "^6.31.1",
