--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
+    "node-cron": "^3.0.2",
     "node-telegram-bot-api": "^0.61.0",
     "pg": "^8.11.0",
     "playwright": "^1.35.0",
